--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -52,8 +52,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvDegrees"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints"/>
+                android:layout_height="wrap_content" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
